fix: update documentation
